--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,10 @@ section {
     background: #fce138;
 }
 
+/*what you do section*/
 .section-title {
     font-size: 55px;
+    display: inline-block;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
@@ -228,4 +230,28 @@ section {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+/*reach out styles start*/
+.contact {
+    text-align: center;
+    background-color: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
 }
