--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,11 +146,12 @@ section {
 /*what you do section*/
 .section-title {
     font-size: 55px;
-    display: inline-block;
+    /*display: inline-block;*/
     color: #024e76;
-    margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
+    border-bottom: 4px solid;
+    width: 700px;
+    margin: 0 auto 35px;
 }
 
 .primary-border {
@@ -247,7 +248,7 @@ section {
     height: 400px;
 }
 
-.contact-info {
+.contact-info, .map {
     width: 410px;
     display: inline-block;
     vertical-align: top;
@@ -255,3 +256,21 @@ section {
     margin: 30px 0 0 60px;
     color: white;
 }
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+/* Reach out styles end */
