--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ section {
 }
 
 .hero-cta h2 {
-    font-style: italic;
+    font-style: italic; 
     font-size: 55px;
     color: #fce138;
 }
@@ -147,7 +147,6 @@ section {
 /*hero style end*/
 
 .intro {
-    text-align: center;
 }
 
 .intro p {
@@ -156,22 +155,23 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 /*what you do section*/
 .section-title {
     font-size: 55px;
-    /*display: inline-block;*/
     color: #024e76;
-    padding: 0 100px 20px 100px;
-    border-bottom: 4px solid;
     width: 700px;
     margin: 0 auto 35px;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -207,7 +207,6 @@ section {
 }
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -255,7 +254,6 @@ section {
 
 /*reach out styles start*/
 .contact {
-    text-align: center;
     background-color: #024e76;
 }
 
@@ -294,3 +292,7 @@ section {
 }
 
 /* Reach out styles end */
+
+.flex-row {
+    display: flex;
+}
