--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10 px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -86,6 +86,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -94,7 +95,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -164,7 +165,7 @@ section {
 
 /*what you do section*/
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     width: 700px;
     margin: 0 auto 35px;
@@ -352,4 +353,23 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* Media query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+    header h1 a {
+        color: tomato;
+    }
+}
+
+/* Media query for tablets and smaller */
+@media screen and (max-width: 768px) {
+    header h1 {
+        font-size: 80px;
+    }
+}
+
+/* media query for mobile phones and smaller */
+@media screen and (max-width: 575px) {
+    font-size: 100px;
 }
