--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,21 @@ section {
 }
 /* end of trainer info */
 
+/* grid start */
+.service-grid-container{
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+/* grid end */
+
 /*reach out styles start*/
 .contact {
     background-color: #024e76;
