--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,8 +356,54 @@ section {
     flex: 1;
 }
 
-.trainer img {
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
+}
+
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(252, 225, 56, 0.3),rgba(2,78,118,1));
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.trainer:hover .trainer-img::after{
+    opacity: 1;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
+}
+
+.trainer-img h3 {
+    font-weight: normal;
+    font-size: 28px;
+    position: relative;
+    z-index: 9000;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: 0.6s;
+}
+
+.trainer-img h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    position: relative;
+    z-index: 9001;
+    top: 200px;
+    transition: 0.6s;
+    transition-delay: 0.2s;
 }
 
 .trainer-bio {
@@ -375,16 +421,33 @@ section {
 
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 
 .trainer-bio p {
     font-size: 17px;
+}
+
+.trainer-1 {
+    background-image: url("../images/01-05-trainers/trainer-1.jpg");
+    background-size: cover;
+}
+
+.trainer-2 {
+    background-image: url("../images/01-05-trainers/trainer-2.jpg");
+    background-size: cover;
+}
+
+.trainer-3 {
+    background-image: url("../images/01-05-trainers/trainer-3.jpg");
+    background-size: cover;
 }
 /* end of trainer info */
 
@@ -576,6 +639,27 @@ section {
 
     .contact-info iframe {
         flex: 1 100%;
+    }
+
+    /*  */
+    .trainer-img::after {
+        display: none;
+    }
+
+    .trainer-img h3 {
+        display: none;
+    }
+
+    .trainer-img h4 {
+        display: none;
+    }
+
+    .trainer-bio h3 {
+        display: block;
+    }
+
+    .trainer-bio h4 {
+        display: block;
     }
 }
 
